<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ahmadrd.instagramclone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_notificationFragment"
            app:destination="@id/notificationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.ahmadrd.instagramclone.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <dialog
        android:id="@+id/navigation_post"
        android:name="com.ahmadrd.instagramclone.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_reels"
        android:name="com.ahmadrd.instagramclone.ui.reels.ReelsFragment"
        android:label="@string/title_reels"
        tools:layout="@layout/fragment_reels" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ahmadrd.instagramclone.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.ahmadrd.instagramclone.ui.home.NotificationFragment"
        android:label="fragment_notification"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_notificationFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>