<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.post.PostFragment">

    <View
        android:id="@+id/divider"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:background="?android:attr/colorPrimary" />


    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgSettings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/settings"
            android:padding="5dp"
            app:tint="?android:attr/colorPrimary"
            android:contentDescription="@string/imgSettings"/>

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgActivity"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/activity"
            android:padding="5dp"
            app:tint="?android:attr/colorPrimary"
            android:contentDescription="@string/imgActivity"/>

        <TextView
            android:id="@+id/tvActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/activity"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgArchive"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/archive"
            android:padding="5dp"
            app:tint="?android:attr/colorPrimary"
            android:contentDescription="@string/imgArchive"/>

        <TextView
            android:id="@+id/tvArchive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/archive"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgQrCode"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/qr_code"
            android:padding="5dp"
            app:tint="?android:attr/colorPrimary"
            android:contentDescription="@string/imgQR"/>

        <TextView
            android:id="@+id/tvQrCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/qr_code"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgSaved"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/save"
            android:padding="5dp"
            app:tint="?android:attr/colorPrimary"
            android:contentDescription="@string/imgSave"/>

        <TextView
            android:id="@+id/tvSaved"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/saved"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/closeFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgCloseFriends"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/close_friends"
            android:padding="5dp"
            app:tint="?android:attr/colorPrimary"
            android:contentDescription="@string/imgClose"/>

        <TextView
            android:id="@+id/tvCloseFriends"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/closeFrirends"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/flipside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgFlipside"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/flipside"
            android:padding="5dp"
            app:tint="?android:attr/colorPrimary"
            android:contentDescription="@string/imgFlipside"/>

        <TextView
            android:id="@+id/tvFlipside"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/flipside"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgLogout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logout"
            android:padding="5dp"
            android:contentDescription="@string/imgLogout"/>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/logout"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>