<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:minHeight="?attr/actionBarSize"
        app:titleTextAppearance="@style/Toolbar.TitleTextProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Username"
        app:titleMargin="10dp"
        app:titleMarginStart="20dp"
        app:menu="@menu/profile_menu"
        app:iconTint="?android:attr/colorPrimary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/user"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/nameProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/bioProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEditProfile"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            android:text="@string/btnEditProfile"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnShareProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio"
            tools:ignore="TouchTargetSizeCheck" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShareProfile"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            android:text="@string/btnShareProfile"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio"
            tools:ignore="TouchTargetSizeCheck" />

        <!--     Count Follow    -->
        <TextView
            android:id="@+id/tvCountPost"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:text="@string/countPost"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPost"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:text="@string/postProfile"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/tvCountPost" />

        <TextView
            android:id="@+id/tvCountFollowers"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/countFollowers"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvCountFollowing"
            app:layout_constraintStart_toEndOf="@+id/tvCountPost"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/followers"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
            app:layout_constraintStart_toEndOf="@+id/tvPost"
            app:layout_constraintTop_toBottomOf="@id/tvCountFollowers"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/tvCountFollowing"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:text="@string/countFollowing"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/following"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCountFollowing"
            tools:ignore="TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tabLayout" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/viewPager" />

</LinearLayout>